src/css/custom.css
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

:root {
  /*
  See css var + hsl color palette technique:
  https://blog.maximeheckel.com/posts/the-power-of-composition-with-css-variables/
   */
  --site-primary-hue-saturation: 167, 68%;
  --site-primary-hue-saturation-light: 167, 56%; /* do we really need this extra one? */

  --ifm-color-primary: hsl(var(--site-primary-hue-saturation), 45%);
  --ifm-color-primary-dark: hsl(var(--site-primary-hue-saturation), 41%);
  --ifm-color-primary-darker: hsl(var(--site-primary-hue-saturation), 38%);
  --ifm-color-primary-darkest: hsl(var(--site-primary-hue-saturation), 32%);

  --ifm-color-primary: #1877f2;
  --ifm-color-info: #25c2a0;

  --ifm-color-primary-light: hsl(var(--site-primary-hue-saturation-light), 54%);
  --ifm-color-primary-lighter: hsl(
    var(--site-primary-hue-saturation-light),
    62%
  );
  --ifm-color-primary-lightest: hsl(
    var(--site-primary-hue-saturation-light),
    73%
  );

  --site-color-feedback-background: #fff;
  --site-color-favorite-background: #f6fdfd;
  --site-color-tooltip: #fff;
  --site-color-tooltip-background: #353738;
  --site-color-svgIcon-favorite: #e9669e;
  --site-color-checkbox-checked-bg: hsl(167deg 56% 73% / 25%);
}

/* @font-face {
  font-family: websiteFont;
  src: url(/fonts/font.otf);
}

* {
  font-family: websiteFont;
} */

::-webkit-scrollbar {
  width: 16px;
  height: 16px;
}
::-webkit-scrollbar-track {
  border-radius: 100vh;
  background: #edf2f7;
}
::-webkit-scrollbar-thumb {
  background: #cbd5e0;
  border-radius: 100vh;
  border: 3px solid #edf2f7;
}
::-webkit-scrollbar-thumb:hover {
  background: #a0aec0;
}

html[data-theme="dark"] {
  --site-color-feedback-background: #f0f8ff;
  --site-color-favorite-background: #1d1e1e;
  --site-color-checkbox-checked-bg: hsl(167deg 56% 73% / 10%);
}

html {
  scroll-behavior: smooth;
}

table {
  border-collapse: collapse;
  border-radius: 20px;
  overflow: hidden;
}

.scrollToTopBtn {
  color: #fff;
  background-color: #25c2a0;
  text-decoration: none;
  border-radius: 25px;
  position: fixed;
  outline: none;
  z-index: 100;
  opacity: 0;
  pointer-events: none;
  padding: 0.75em 1.5em;
  inset: auto 2em 2em auto;
  transition: all 250ms ease-in-out;
}

img {
  border-radius: 20px;
}

.isVisible {
  pointer-events: auto;
  opacity: 1;
}

.navbar .navbar-items {
  overflow-x: scroll
}

.dropbtn {
  background-color: #04aa6d;
  color: white;
  padding: 16px;
  font-size: 16px;
  border: none;
}

.dropdown {
  position: relative;
  display: inline-block;
  border-radius: 12px;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #ddd;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
  border-radius: 7px;
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  border-radius: 7px;
}

.special {
  align-items: center;
  justify-content: center;
  align-content: center;
}

.dropdown-content a:hover {
  background-color: #007aff;
}

.dropdown:hover .dropdown-content {
  display: block;
}

.dropdown:hover .dropbtn {
  background-color: #3e8e41;
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

html[data-theme="dark"] .docusaurus-highlight-code-line {
  background-color: rgba(66, 66, 66, 0.3);
}

.header-github-link:hover {
  opacity: 0.6;
}

.header-github-link:before {
  content: "";
  width: 24px;
  height: 24px;
  display: flex;
  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
    no-repeat;
}

html[data-theme="dark"] .header-github-link:before {
  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='white' d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
    no-repeat;
}

/* .header-youtube-link:hover {
  opacity: 0.6;
}
/* ... */

